Bug 1598587 - Tweak folder notification during deletion to keep view selection in sync. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D117403

--HG--
extra : amend_source : 482441f3d8d764f6b181c2ef4992bc92c500991d